# odp2md

./: .gitignore  LICENSE.md  Makefile  README.md  odp-juicer.py  odp2md.py  odp2pandoc.py  pyproject.toml  setup.py
examples/simple/: simple-000.odp  simple-001.odp
odp2md/: __main__.py  odp2md.py
src/odp2md/: __main__.py  app.py  odp2md.py  parser.py  scope.py  slide.py
